--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -73,8 +73,17 @@
 
     <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
 
+    <script src="../js/Warehouses/warehouses.main.js"></script>
     <script src="../js/Warehouses/warehouses.create.js"></script>
+    <script src="../js/Warehouses/warehouses.create.n.js"></script>
     <script src="../js/Warehouses/warehouses.show.js"></script>
+    <script src="../js/Warehouses/warehouses.update.js"></script>
+
+    <script src="../js/ProductGroup/productgroups.main.js"></script>
+    <script src="../js/ProductGroup/productgroups.create.js"></script>
+    <script src="../js/ProductGroup/productgroups.create.n.js"></script>
+    <script src="../js/ProductGroup/productgroups.show.js"></script>
+    <script src="../js/ProductGroup/productgroups.update.js"></script>
 
     <script src="../js/Teams/teams.create.js"></script>
     <script src="../js/Teams/teams.show.js"></script>
@@ -386,13 +395,13 @@
                         <a href="#assignscreate"><i class="fa fa-dashboard fa-fw"></i> Phân công đơn hàng</a>
                     </li>
                     <li>
-                        <a href="#packagetypesshow"><i class="fa fa-dashboard fa-fw"></i> Quản lý loại gói hàng</a>
+                        <a href="#productgroupsmain"><i class="fa fa-dashboard fa-fw"></i> Quản lý nhóm hàng</a>
                     </li>
                     <li>
                         <a href="#accountsmain"><i class="fa fa-dashboard fa-fw"></i> Quản lý tài khoản</a>
                     </li>
                     <li>
-                        <a href="#warehousesshow"><i class="fa fa-dashboard fa-fw"></i> Quản lý danh sách kho hàng</a>
+                        <a href="#warehousesmain"><i class="fa fa-dashboard fa-fw"></i> Quản lý danh sách kho hàng</a>
                     </li>
                     <li>
                         <a href="#teamsshow"><i class="fa fa-dashboard fa-fw"></i> Quản lý đội</a>
