--- a/Client Web/webMshipper/pages/Warehouses/Create.n.html
+++ b/Client Web/webMshipper/pages/Warehouses/Create.n.html
@@ -3,7 +3,7 @@
         <div id="AccountCreateN">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Tạo danh sách tài khoản</h1>
+                    <h1 class="page-header">Tạo Danh Sách Kho</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -15,7 +15,7 @@
                         <img ng-click="closeShowMore1()" src="../assets/img/icons/xController.png">
                     </div>
                     <div class="row core">
-                        <p>Nhập địa chỉ giao hàng</p>
+                        <p>Nhập địa chỉ kho hàng</p>
                     </div>
 
                     <div class="row panel-body" id="mapAccountAddress">
@@ -47,33 +47,6 @@
                 </div>
             </div>
 
-            <!--textBox overlay-->
-            <div ng-if="showImage" class="overlay" style="display: block;">
-                <div class="model glx-container" style="margin-top: -166.5px;">
-                    <div class="row closeOver">
-                        <img ng-click="closeShowImage()" src="../assets/img/icons/xController.png">
-                    </div>
-                    <div class="row core">
-                        <p>Nhập hình ảnh</p>
-                    </div>
-
-                    <div class="row panel-body">
-                        <button ng-click="createImage()">Xong</button>
-
-                        <div class="form-group">
-                            <label>Chọn Hình Ảnh</label>
-                            <input id="fileButtonImage" type="file" ng-click="uploadImage()" custom-on-change="uploadFile" style="display: none;">
-                            <button style="width: 150px" type="button" class="btn btn-primary" onclick="document.getElementById('fileButtonImage').click();">Nhập tập tin</button>
-                        </div>
-
-                        <div class="form-group">
-                            <img src="{{srcImage}}" style="width:auto;height:150px;">
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
@@ -98,26 +71,7 @@
                                 </div>
 
                                 <div class="col-sm-2">
-                                    <button style="width: 150px; float: left" type="button" class="btn btn-primary" ng-click="saveAccounts()">Lưu thông tin</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <br>
-                        <div class="row">
-                            <div class="col-xs-4">
-                                <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label>Vai trò</label>
-                                        <ui-select ng-model="selectedRole.selected" theme="bootstrap" on-select = "selectRole($item)">
-                                            <ui-select-match placeholder="Chọn...">{{$select.selected.name}}
-                                            </ui-select-match>
-                                            <ui-select-choices
-                                                    repeat="item as item in role | filter: $select.search">
-                                                <div ng-bind-html="item.name | highlight: $select.search"></div>
-                                            </ui-select-choices>
-                                        </ui-select>
-                                    </div>
+                                    <button style="width: 150px; float: left" type="button" class="btn btn-primary" ng-click="saveWarehouses()">Lưu thông tin</button>
                                 </div>
                             </div>
                         </div>
@@ -130,33 +84,19 @@
                                 <thead>
                                 <tr>
                                     <th>STT</th>
-                                    <th>SĐT</th>
-                                    <th>Họ và Tên</th>
-                                    <th>Ngày Sinh</th>
-                                    <th ng-if="b_driverLicense">Bằng Lái</th>
-                                    <th>Số Chứng Minh</th>
+                                    <th>ID</th>
+                                    <th>Tên Kho</th>
                                     <th>Địa Chỉ</th>
-                                    <th ng-if="b_deliveryAddress">Địa Chỉ Giao Hàng</th>
-                                    <th>Email</th>
-                                    <th ng-if="b_company">Công Ty</th>
-                                    <th>Giới Tính</th>
-                                    <th>Ảnh</th>
+                                    <th>Ghi Chú</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr class="pointer" ng-repeat="x in accounts">
+                                <tr class="pointer" ng-repeat="x in warehouses">
                                     <td>{{$index + 1}}</td>
-                                    <td>{{x.PhoneNumber}}</td>
-                                    <td>{{x.FullName}}</td>
-                                    <td>{{x.BirthDay}}</td>
-                                    <td ng-if="b_driverLicense">{{x.DriverLicenseNumber}}</td>
-                                    <td>{{x.IdNumber}}</td>
-                                    <td>{{x.Address}}</td>
-                                    <td ng-if="b_deliveryAddress"><a href="" ng-click="clickShowMaps(x)">{{x.DeliveryAddress}}</a></td>
-                                    <td>{{x.Email}}</td>
-                                    <td ng-if="b_company">{{x.CompanyName}}</td>
-                                    <td>{{x.Gender}}</td>
-                                    <td><button ng-click="showImageButton(x)">Xem</button></td>
+                                    <td>{{x.id}}</td>
+                                    <td>{{x.name}}</td>
+                                    <td><a href="" ng-click="clickShowMaps(x)">{{x.address}}</a></td>
+                                    <td>{{x.note}}</td>
                                 </tr>
                                 </tbody>
                             </table>
