--- a/Client Web/webMshipper/pages/Warehouses/Main.html
+++ b/Client Web/webMshipper/pages/Warehouses/Main.html
@@ -6,7 +6,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Quản Lý Tài Khoản</h1>
+                    <h1 class="page-header">Quản Lý Kho</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
